[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.1"
indicatif = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.141"
flate2 = "1.0"
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
url = "2.5.0"
local-ip-address = "0.6.1"
rayon = "1.10.0"
tokio-rustls = "0.23"
rustls = "0.20"
rustls-pemfile = "1.0"
ahash = { version = "0.8.12", features = ["serde"] }

